@@ -226,6 +226,12 @@ DECL|field|proxStream
 name|IndexInput
 name|proxStream
 decl_stmt|;
+comment|// optionally used for the .nrm file shared by multiple norms
+DECL|field|singleNormStream
+specifier|private
+name|IndexInput
+name|singleNormStream
+decl_stmt|;
 comment|// Compound File Reader when based on a compound file segment
 DECL|field|cfsReader
 name|CompoundFileReader
@@ -409,6 +415,37 @@ operator|.
 name|dirty
 operator|=
 literal|false
+expr_stmt|;
+block|}
+comment|/** Closes the underlying IndexInput for this norm.      * It is still valid to access all other norm properties after close is called.      * @throws IOException      */
+DECL|method|close
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|in
+operator|!=
+literal|null
+operator|&&
+name|in
+operator|!=
+name|singleNormStream
+condition|)
+block|{
+name|in
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|in
+operator|=
+literal|null
 expr_stmt|;
 block|}
 block|}
@@ -2252,6 +2289,13 @@ operator|=
 name|bytes
 expr_stmt|;
 comment|// cache it
+comment|// it's OK to close the underlying IndexInput as we have cached the
+comment|// norms and will never read them again.
+name|norm
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 block|}
 return|return
 name|norm
@@ -2447,23 +2491,11 @@ argument_list|)
 expr_stmt|;
 return|return;
 block|}
-name|IndexInput
-name|normStream
-init|=
-operator|(
-name|IndexInput
-operator|)
+comment|// Read from disk.  norm.in may be shared across  multiple norms and
+comment|// should only be used in a synchronized context.
 name|norm
 operator|.
 name|in
-operator|.
-name|clone
-argument_list|()
-decl_stmt|;
-try|try
-block|{
-comment|// read from disk
-name|normStream
 operator|.
 name|seek
 argument_list|(
@@ -2472,7 +2504,9 @@ operator|.
 name|normSeek
 argument_list|)
 expr_stmt|;
-name|normStream
+name|norm
+operator|.
+name|in
 operator|.
 name|readBytes
 argument_list|(
@@ -2484,15 +2518,6 @@ name|maxDoc
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
-finally|finally
-block|{
-name|normStream
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-block|}
 block|}
 DECL|method|openNorms
 specifier|private
@@ -2597,10 +2622,10 @@ operator|=
 name|cfsDir
 expr_stmt|;
 block|}
-name|long
-name|normSeek
+comment|// singleNormFile means multiple norms share this file
+name|boolean
+name|singleNormFile
 init|=
-operator|(
 name|fileName
 operator|.
 name|endsWith
@@ -2611,12 +2636,65 @@ name|IndexFileNames
 operator|.
 name|NORMS_EXTENSION
 argument_list|)
-condition|?
-name|nextNormSeek
-else|:
-literal|0
-operator|)
 decl_stmt|;
+name|IndexInput
+name|normInput
+init|=
+literal|null
+decl_stmt|;
+name|long
+name|normSeek
+decl_stmt|;
+if|if
+condition|(
+name|singleNormFile
+condition|)
+block|{
+name|normSeek
+operator|=
+name|nextNormSeek
+expr_stmt|;
+if|if
+condition|(
+name|singleNormStream
+operator|==
+literal|null
+condition|)
+block|{
+name|singleNormStream
+operator|=
+name|d
+operator|.
+name|openInput
+argument_list|(
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
+comment|// All norms in the .nrm file can share a single IndexInput since
+comment|// they are only used in a synchronized context.
+comment|// If this were to change in the future, a clone could be done here.
+name|normInput
+operator|=
+name|singleNormStream
+expr_stmt|;
+block|}
+else|else
+block|{
+name|normSeek
+operator|=
+literal|0
+expr_stmt|;
+name|normInput
+operator|=
+name|d
+operator|.
+name|openInput
+argument_list|(
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
 name|norms
 operator|.
 name|put
@@ -2628,12 +2706,7 @@ argument_list|,
 operator|new
 name|Norm
 argument_list|(
-name|d
-operator|.
-name|openInput
-argument_list|(
-name|fileName
-argument_list|)
+name|normInput
 argument_list|,
 name|fi
 operator|.
@@ -2693,10 +2766,25 @@ argument_list|()
 decl_stmt|;
 name|norm
 operator|.
-name|in
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|singleNormStream
+operator|!=
+literal|null
+condition|)
+block|{
+name|singleNormStream
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+name|singleNormStream
+operator|=
+literal|null
 expr_stmt|;
 block|}
 block|}
