@@ -34,6 +34,10 @@ Bug fixes
     implementations to be specified via the System property
     org.apache.lucene.store.FSDirectoryLockFactoryClass.  (Mike McCandless)
 
+ 4. LUCENE-821: The new single-norm-file introduded by LUCENE-756
+    failed to reduce the number of open descriptors since it was still
+    opened once per field with norms. (yonik)
+
 New features
 
  1. LUCENE-759: Added two n-gram-producing TokenFilters.
